2010-03-27  Ulrich Drepper  <drepper@redhat.com>

	* posix/glob.c (glob): Initialize oldcount early, too.

2010-03-26  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/fcntl.c: Define miss_F_GETOWN_EX
	only if needed.
	Patch mostly by Paul Pluzhnikov <ppluzhnikov@google.com>.

2010-03-26  Richard Henderson  <rth@redhat.com>

	* sysdeps/generic/ldsodefs.h (_dl_random): Mark attribute_relro;

	* stdio-common/psiginfo.c (psiginfo): Fix printf format
	warning for si_band.

	* locale/setlocale.c (free_category): Finish renaming
	struct locale_data to __locale_data.

	* csu/gmon-start.c (ENTRY_POINT, etext): Declare as char[], not void.
	* elf/dl-sysdep.c (_end): Likewise.
	* sysdeps/unix/sysv/dl-sysdep.c (frob_brk): Likewise with locally
	declared _end, and associated variables.

2010-03-26  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/posix/getaddrinfo.c (gaih_inet): Don't assume success always
	means aborting the loop over the NSS methods.

2010-03-25  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/posix/getaddrinfo.c (gaih_inet): Reset no_data before
	each action.

2010-03-26  Ulrich Drepper  <drepper@redhat.com>

	* malloc/malloc.c: Remove stale reference to website.

2010-03-24  Ulrich Drepper  <drepper@redhat.com>

	[BZ #11389]
	* bits/time.h: Define CLOCK_MONOTONIC_RAW, CLOCK_REALTIME_COARSE, and
	CLOCK_MONOTONIC_COARSE.
	* sysdeps/unix/sysv/linux/clock_getres.c: Handle CLOCK_MONOTONIC_RAW,
	CLOCK_REALTIME_COARSE, and CLOCK_MONOTONIC_COARSE.
	* sysdeps/unix/sysv/linux/clock_gettime.c: Likewise.
	* sysdeps/unix/sysv/linux/clock_settime.c: Likewise.

2010-03-25  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/posix/cuserid.c: Fix typo.

2010-03-16  Chris Demetriou  <cgd@google.com>

	[BZ #11394]
	* locale/programs/simple-hash.c: Include inttypes.h.
	(hashval_t): Defined to be uint32_t.
	* locale/programs/simple_hash.h: Include inttypes.h.
	(compute_hashval): Change return type to uint32_t.

2010-03-24  Ulrich Drepper  <drepper@redhat.com>
